<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Fragments.AccountManagement.AccountMenu.AccountMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/accountSettingButton"
            android:layout_width="match_parent"
            android:layout_height="74sp"
            android:background="@color/buttonBackground"
            android:text="@string/edit_account_details"
            android:textColor="@color/textMain" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp"/>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="74sp"
            android:background="@color/buttonBackground"
            android:text="@string/change_password"
            android:textColor="@color/textMain" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp"/>

        <Button
            android:id="@+id/viewRecentlyViewedListingsButton"
            android:layout_width="match_parent"
            android:layout_height="74sp"
            android:background="@color/buttonBackground"
            android:text="@string/view_recently_viewed_listings"
            android:textColor="@color/textMain" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp"/>

        <Button
            android:id="@+id/viewUserListingsButton"
            android:layout_width="match_parent"
            android:layout_height="74sp"
            android:background="@color/buttonBackground"
            android:text="@string/view_your_listings"
            android:textColor="@color/textMain" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="74sp"
            android:background="@color/buttonBackground"
            android:text="@string/log_out"
            android:textColor="@color/textMain" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp"/>

    </LinearLayout>

</ScrollView>