<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Results.ResultsFragment"
    android:background="@drawable/custom_background">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/textMain"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/retryButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/toHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76sp"
        android:background="@color/buttonBackground"
        android:padding="10sp"
        android:text="@string/back_to_homepage_buton"
        android:textColor="@color/textMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56sp"
        android:background="@color/buttonBackground"
        android:padding="10sp"
        android:text="@string/retry_button"
        android:textColor="@color/textMain"
        app:layout_constraintBottom_toTopOf="@+id/toHomeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>