<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/singleListingSwipeRefreshLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/singleListingTitleTextView"
                android:layout_width="412dp"
                android:layout_height="77dp"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/title"
                android:textColor="@color/textMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/singleListingImageView"
                android:layout_width="402dp"
                android:layout_height="160dp"
                android:background="@color/colourImageBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleListingTitleTextView"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/singleListingBodyTextView"
                android:layout_width="328dp"
                android:layout_height="119dp"
                android:layout_marginTop="64dp"
                android:background="#5F5959"
                android:padding="10sp"
                android:text="@string/body"
                android:textColor="@android:color/secondary_text_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleListingImageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/singleListingRecyclerView"
                android:layout_width="347dp"
                android:layout_height="275dp"
                android:layout_marginTop="264dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleListingBodyTextView"
                tools:listitem="@layout/listing_item_card_small" />

            <LinearLayout
                android:layout_width="293dp"
                android:layout_height="222dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/singleListingRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleListingBodyTextView">

                <Button
                    android:id="@+id/singleListing_ViewListingLocationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/buttonBackground"
                    android:padding="10sp"
                    android:text="@string/view_listing_location"
                    android:textColor="@color/textMain" />

                <Button
                    android:id="@+id/singleListing_ViewUserAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/buttonBackground"
                    android:padding="10sp"
                    android:text="@string/view_authors_account"
                    android:textColor="@color/textMain" />

                <Button
                    android:id="@+id/singleListingReserveButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/buttonBackground"
                    android:padding="10sp"
                    android:text="@string/reserve_selected_items"
                    android:textColor="@color/textMain" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>